Fixed z-index bug on video

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -110,6 +110,7 @@ a {
   height: 100%;
   padding-left: 0 !important;
   padding-right: 0 !important;
+  z-index: -1;
 
   background: $black;
 }
